# cochonnet

./: CLAUDE.md  README.md  package-lock.json  package.json  sample_teams.csv  sample_teams_8.csv
.github/workflows/: release.yml
sample_teams/: doubles_16.csv  doubles_32.csv  doubles_8.csv  singles_16.csv  singles_32.csv  singles_8.csv  triples_16.csv  triples_32.csv  triples_8.csv
scripts/: generate-icons.mjs
spec/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: brackets.rs  mod.rs  qualifying.rs  teams.rs  tournaments.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src/components/: Layout.tsx
src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Select.tsx  Table.tsx  Tabs.tsx  index.ts
src/features/brackets/: BracketDisplay.tsx  BracketView.tsx  index.ts
src/features/export/: BracketPDF.tsx  ExportView.tsx  ScoreSheetPDF.tsx  StandingsPDF.tsx  index.ts
src/features/pairing/: QualifyingRounds.tsx  RoundGames.tsx  StandingsTable.tsx  index.ts
src/features/teams/: TeamForm.tsx  TeamsList.tsx  index.ts
src/features/tournaments/: TournamentCreate.tsx  TournamentDetail.tsx  TournamentEdit.tsx  TournamentForm.tsx  TournamentList.tsx  index.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json
src/lib/: utils.ts
src/stores/: tournamentStore.ts
src/types/: index.ts
